// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 기본 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div>
      <svg
        class="lucide lucide-server w-6 h-6 text-blue-400 "
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="2"
        />
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="14"
        />
        <line
          x1="6"
          x2="6.01"
          y1="6"
          y2="6"
        />
        <line
          x1="6"
          x2="6.01"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 에러 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-red-500 bg-red-500/10"
  >
    <div>
      <svg
        class="lucide lucide-circle-alert w-6 h-6 text-red-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 완료 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-green-500 bg-green-500/10"
  >
    <div>
      <svg
        class="lucide lucide-circle-check-big w-6 h-6 text-green-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 진행 중 상태 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div>
      <svg
        class="lucide lucide-server w-6 h-6 text-blue-400 animate-pulse"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="2"
        />
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="14"
        />
        <line
          x1="6"
          x2="6.01"
          y1="6"
          y2="6"
        />
        <line
          x1="6"
          x2="6.01"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
  </div>
  <div
    class="absolute inset-0 rounded-xl border-2 border-blue-400/30 animate-spin"
  />
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 커스텀 아이콘 스냅샷 1`] = `
<div
  class="relative"
>
  <div
    class="w-12 h-12 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div>
      <svg
        class="lucide lucide-server w-6 h-6 text-blue-400 "
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="2"
        />
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="14"
        />
        <line
          x1="6"
          x2="6.01"
          y1="6"
          y2="6"
        />
        <line
          x1="6"
          x2="6.01"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 크기별 스냅샷 - lg 1`] = `
<div
  class="relative"
>
  <div
    class="w-16 h-16 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div>
      <svg
        class="lucide lucide-server w-8 h-8 text-blue-400 "
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="2"
        />
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="14"
        />
        <line
          x1="6"
          x2="6.01"
          y1="6"
          y2="6"
        />
        <line
          x1="6"
          x2="6.01"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`🎯 StatusIcon 컴포넌트 > 스냅샷 테스트 > 크기별 스냅샷 - sm 1`] = `
<div
  class="relative"
>
  <div
    class="w-8 h-8 flex items-center justify-center rounded-xl border-2 border-blue-500 bg-blue-500/10"
  >
    <div>
      <svg
        class="lucide lucide-server w-4 h-4 text-blue-400 "
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="2"
        />
        <rect
          height="8"
          rx="2"
          ry="2"
          width="20"
          x="2"
          y="14"
        />
        <line
          x1="6"
          x2="6.01"
          y1="6"
          y2="6"
        />
        <line
          x1="6"
          x2="6.01"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
  </div>
</div>
`;
